data/forge_javadoc/1.7.10/processed/net_minecraft_world_gen_NoiseGeneratorImproved.md
# NoiseGeneratorImproved

**Inheritance:** java.lang.Object → net.minecraft.world.gen.NoiseGenerator → net.minecraft.world.gen.NoiseGeneratorImproved

## Class signature

```java
public class NoiseGeneratorImproved extends NoiseGenerator
```

## Constructors

- `NoiseGeneratorImproved()`
- `NoiseGeneratorImproved(java.util.Random p_i45469_1_)`

## Methods

- `double func_76309_a(int p_76309_1_, double p_76309_2_, double p_76309_4_)`
- `double grad(int p_76310_1_, double p_76310_2_, double p_76310_4_, double p_76310_6_)`
- `double lerp(double p_76311_1_, double p_76311_3_, double p_76311_5_)`
- `void populateNoiseArray(double[] p_76308_1_, double p_76308_2_, double p_76308_4_, double p_76308_6_, int p_76308_8_, int p_76308_9_, int p_76308_10_, double p_76308_11_, double p_76308_13_, double p_76308_15_, double p_76308_17_)`

## Fields

- `double xCoord`
- `double yCoord`
- `double zCoord`